se agrega vista obra y hay fixes en el css

--- a/obra-1.html
+++ b/obra-1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>BAC | Obra Belgrano</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -46,125 +47,149 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		<div id="bac-page">
-			<a href="#" class="js-bac-nav-toggle bac-nav-toggle"><i></i>
-				<span class=""><img class="logo" src="images/logo.png"></span>
-			</a>
-			<aside id="bac-aside" role="complementary" class="border js-fullheight">
-				<nav id="bac-main-menu" role="navigation">
-					<ul>
-						<li class="bac-active"><a href="index.html">Home</a></li>
-						<li><a href="projects.html">Proyectos</a></li>
-						<li><a href="about.html">Quienes Somos</a></li>
-						<li><a href="tour360.html">Tour 360°</a></li>
-						<li><a href="contact.html">Contacto</a></li>
-					</ul>
-				</nav>
-				<a id="bac-logo" href="index.html"><img src="images/logo.png" alt="Logo BAC"></a>
+</head>
 
-				<div class="bac-footer">
-					<div class="comunicate">
-						<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
-						<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
-							<i class="icon-mail"></i> consultanos</a>
-						</div>
+<body>
+	<div id="bac-page">
+		<a href="#" class="js-bac-nav-toggle bac-nav-toggle"><i></i>
+			<span class=""><img class="logo" src="images/logo.png"></span>
+		</a>
+		<aside id="bac-aside" role="complementary" class="border js-fullheight">
+			<nav id="bac-main-menu" role="navigation">
+				<ul>
+					<li class="bac-active"><a href="index.html">Home</a></li>
+					<li><a href="projects.html">Proyectos</a></li>
+					<li><a href="about.html">Quienes Somos</a></li>
+					<li><a href="tour360.html">Tour 360°</a></li>
+					<li><a href="contact.html">Contacto</a></li>
+				</ul>
+			</nav>
+			<a id="bac-logo" href="index.html"><img src="images/logo.png" alt="Logo BAC"></a>
 
-					<ul>
-						<li><a href="https://www.facebook.com/BACestudioarquitectura"><i class="icon-facebook2"></i></a></li>
-						<li><a href="#"><i class="icon-twitter2"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-					</ul>
+			<div class="bac-footer">
+				<div class="comunicate">
+					<a href="tel:1512345678" class="telcom btn btn-primary"><i class="icon-phone"></i> 15-1234-5678</a>
+					<a href="mailto:info@estudiobac.com" class="mailcom btn btn-primary">
+						<i class="icon-mail"></i> consultanos</a>
 				</div>
 
-			</aside>
+				<ul>
+					<li><a href="https://www.facebook.com/BACestudioarquitectura"><i class="icon-facebook2"></i></a></li>
+					<li><a href="#"><i class="icon-twitter2"></i></a></li>
+					<li><a href="#"><i class="icon-instagram"></i></a></li>
+					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+				</ul>
+			</div>
 
-			<div id="bac-main">
-				<div class="bac-obra">
+		</aside>
+
+		<div id="bac-main">
+			<div class="bac-obra">
+					<div id="thumbnail-preview-indicators" class="carousel slide" data-ride="carousel">
+					  <!-- Indicators -->
+					  <ol class="carousel-indicators">
+					    <li data-target="#thumbnail-preview-indicators" data-slide-to="0" class="active">
+					      <div class="thumbnail">
+					        <img class="img-responsive" src="images/obra11.jpg">
+					      </div>
+					    </li>
+					    <li data-target="#thumbnail-preview-indicators" data-slide-to="1">
+					      <div class="thumbnail">
+					        <img class="img-responsive" src="images/obra5.jpg">
+					      </div>
+					    </li>
+					    <li data-target="#thumbnail-preview-indicators" data-slide-to="2">
+					      <div class="thumbnail">
+					        <img class="img-responsive" src="images/obra9.jpg">
+					      </div>
+					    </li>
+					  </ol>
+					  <div class="carousel-inner">
+					    <div class="item slides active">
+					      <div class="slide-1"></div>
+					      <div class="container">
+					        <div class="carousel-caption">
+					          <!-- <h1>New carousel layout</h1>
+					          <p>Responsive thumbnail preview in carousel indicators.</p>
+					          <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
+					        </div>
+					      </div>
+					    </div>
+					    <div class="item slides">
+					      <div class="slide-2"></div>
+					      <div class="container">
+					        <div class="carousel-caption">
+					          <!-- <h1>Another example headline.</h1>
+					          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+					          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
+					        </div>
+					      </div>
+					    </div>
+					    <div class="item slides">
+					      <div class="slide-3"></div>
+					      <div class="container">
+					        <div class="carousel-caption">
+					          <!-- <h1>One more for good measure.</h1>
+					          <p>Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+					          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
+					        </div>
+					      </div>
+					    </div>
+					  </div>
+					  <a class="left carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="prev"><span class="fas fa-chevron-left"></span></a>
+					  <a class="right carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="next"><span class="fas fa-chevron-right"></span></a>
+					</div>
 					<div class="bac-narrow-content">
-						<div class="row">
-							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-								<h2 class="bac-heading">Obra 01: Belgrano</h2>
+					<div class="row">
+						<div class="col-lg-4 col-md-5 col-sm-12 animate-box fadeInLeft" data-animate-effect="fadeInLeft">
+							<div class="panel-group project_collaps">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4 class="panel-title">
+											<a class="btn">CALLE DE PRUEBA 1234, SAN CLEMENTE</a>
+										</h4>
+									</div>
+								</div>
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4 class="panel-title">
+											<a class="btn">4 AMBIENTES</a>
+										</h4>
+									</div>
+								</div>
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4 class="panel-title">
+											<a class="btn">AREA: 200 m2</a>
+										</h4>
+									</div>
+								</div>
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4 class="panel-title">
+											<a class="btn">FECHA: 20 de Noviembre de 2010</a>
+										</h4>
+									</div>
+								</div>
 							</div>
-					<div class="row building-content">
-						<div class="col-lg-12 col-md-12 side-building ">
-							<div class="row">
-								<p class="p-building col-lg-3 col-md-3 col-3 animate-box" data-animate-effect="fadeInLeft"><a href="#">Belgrano 1234, Bs.As.</a> <span class="icon-location"></span></p>
-								<p class="p-building col-lg-3 col-md-3 col-3 animate-box" data-animate-effect="fadeInLeft"><a href="#">12 de Marzo de 2017</a> <span class="icon-stopwatch"></span></p>
-								<p class="p-building col-lg-3 col-md-3 col-3 animate-box" data-animate-effect="fadeInLeft"><a href="#">120 m2</a> <span class="icon-download"></span></p>
-								<p class="p-building col-lg-3 col-md-3 col-3 animate-box" data-animate-effect="fadeInLeft"><a href="#">3 ambientes</a> <span class="icon-home"></span></p>
+							<div class="obra-quote">
+								<h4 class="obra-title">Datos Importantes</h4>
+								<div class="quote-inner">
+									<p>Proin gravida nibh vel velit hace aauctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipissum, nec sagittis sem nibh id elit. </p>
+								</div>
 							</div>
 						</div>
-					</div>
-
-						<div class="col-lg-offset-2 col-md-offset-2 col-lg-8 col-md-8 data-building animate-box">
-
-
-							<div class="flexslider animate-box" id="f1" style="direction:ltr">
-
-							  <ul class="slides">
-							    <li>
-							      <img src="http://estudiobac.com/images/obras/belgrano/2_obra_belgrano_frente_sin_parasoles.jpg" />
-							      <p class="flex-caption">Frente sin parasoles</p>
-							    </li>
-							    <li>
-							      <img src="http://www.estudiobac.com/images/obras/belgrano/3_obra_belgrano_frente_en_escorso.jpg" />
-							      <p class="flex-caption">Frente en escorso</p>
-							    </li>
-							    <li>
-							      <img src="http://www.estudiobac.com/images/obras/belgrano/4_obra_belgrano_frente_duplex_s.jpg" />
-							      <p class="flex-caption">Frente duplex</p>
-							    </li>
-							    <li>
-							      <img src="http://www.estudiobac.com/images/obras/belgrano/5_obra_belgrano_contrafrente%20_duplex_s.jpg" />
-							      <p class="flex-caption">Contrafrente duplex</p>
-							    </li>
-							    <li>
-							      <img src="http://www.estudiobac.com/images/obras/belgrano/6_obra_belgrano_planta_departamento_final.jpg" />
-							      <p class="flex-caption">Planta departamentos</p>
-							    </li>
-							    <li>
-							      <img src="http://www.estudiobac.com/images/obras/belgrano/7_obra_belgrano_planta_baja_duplex_final.jpg" />
-							      <p class="flex-caption">Planta baja duplex</p>
-							    </li>
-							    <li>
-							      <img src="http://www.estudiobac.com/images/obras/belgrano/8_obra_belgrano_planta_alta_duplex_final.jpg" />
-							      <p class="flex-caption">Planta alta duplex</p>
-							    </li>
-							  </ul>
+						<div class="col-lg-8 col-md-7 col-sm-12 animate-box" data-animate-effect="fadeInLeft">
+							<div class="obra-description">
+								<h4 class="obra-title">Resolución del Proyecto</h4>
+								<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed semper, lacus sed feugiat dictum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+									totam rem aperiam, eaque ipsa quae ab illo inventore. Proin gravida nibh vel velit hace aauctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipissum, nec sagittis sem nibh id elit. Duis sed odio sit
+									amet nibh vulputate cursus a sit aasmet mauris.</p>
+								<p>Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti hacsociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a
+									augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam.</p>
+								<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed semper, lacus sed feugiat dictum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+									totam rem aperiam, eaque ipsa quae ab illo inventore. Proin gravida nibh vel velit hace aauctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Duis sed odio sit.</p>
 							</div>
-							<div class="flexslider carousel" id="f2" style="direction:ltr">
-							  <ul class="slides">
-									<li>
-							      <img class="animate-box" src="http://estudiobac.com/images/obras/belgrano/2_obra_belgrano_frente_sin_parasoles.jpg" />
-							    </li>
-							    <li>
-							      <img class="animate-box" src="http://www.estudiobac.com/images/obras/belgrano/3_obra_belgrano_frente_en_escorso.jpg" />
-							    </li>
-							    <li>
-							      <img class="animate-box" src="http://www.estudiobac.com/images/obras/belgrano/4_obra_belgrano_frente_duplex_s.jpg" />
-							    </li>
-							    <li>
-							      <img class="animate-box" src="http://www.estudiobac.com/images/obras/belgrano/5_obra_belgrano_contrafrente%20_duplex_s.jpg" />
-							    </li>
-							    <li>
-							      <img class="animate-box" src="http://www.estudiobac.com/images/obras/belgrano/6_obra_belgrano_planta_departamento_final.jpg" />
-							    </li>
-							    <li>
-							      <img class="animate-box" src="http://www.estudiobac.com/images/obras/belgrano/7_obra_belgrano_planta_baja_duplex_final.jpg" />
-							    </li>
-							    <li>
-							      <img class="animate-box" src="http://www.estudiobac.com/images/obras/belgrano/8_obra_belgrano_planta_alta_duplex_final.jpg" />
-							    </li>
-							  </ul>
-							</div>
-							<h3 class="titulo-obra bac-heading">Departamentos Belgrano 1985</h3>
-							<p class="detalle-obra">
-							Departamentos, 2 ambientes de categoría, 4 Duplex amplios y luminosos de categoría.
-							Anticipo y Cuotas Cantidad: 32 unidades 2 ambientes de 42 m2, PB y PA, 4 Duplex de 84 m2, cocheras subterráneas.
-							</p>
 						</div>
 					</div>
 				</div>
@@ -223,5 +248,6 @@
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
