se corrigieron errores de class active, agregó vista obra, modificó pesos imgs y varios codigos css

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 			<aside id="bac-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/00_frente_cielo3.jpg);">
+				   	<li style="background-image: url(images/slide.jpg);">
 						</li>
-						<li style="background-image: url(images/060ARQ_CASTRO_VILLAGE_OUT.jpg);">
+						<li style="background-image: url(images/slide2.jpg);">
 						</li>
-				   	<li style="background-image: url(images/060ARQ_CASTRO_VILLAGE_IN.jpg);">
+				   	<li style="background-image: url(images/slide3.jpg);">
 				   	</li>
-				   	<li style="background-image: url(images/3.Frente_teja_plana_negra.jpg);">
+				   	<li style="background-image: url(images/slide4.jpg);">
 				   	</li>
 				  	</ul>
 			  	</div>
