--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<body style="background: black;">
 		<div id="bac-page">
 		<a href="#" class="js-bac-nav-toggle bac-nav-toggle"><i></i>
 			<span class=""><img class="logo" src="images/logo.png"></span>
@@ -51,8 +51,8 @@
 		<aside id="bac-aside" role="complementary" class="border js-fullheight">
 			<nav id="bac-main-menu" role="navigation">
 				<ul>
-					<li class="bac-active"><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Proyectos</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li class="bac-active"><a href="projects.html">Proyectos</a></li>
 					<li><a href="about.html">Quienes Somos</a></li>
 					<li><a href="tour360.html">Tour 360°</a></li>
 					<li><a href="contact.html">Contacto</a></li>
