--- a/obra-1.html
+++ b/obra-1.html
@@ -85,95 +85,96 @@
 
 		<div id="bac-main">
 			<div class="bac-obra">
-					<div id="thumbnail-preview-indicators" class="carousel slide" data-ride="carousel">
-					  <!-- Indicators -->
-					  <ol class="carousel-indicators">
-					    <li data-target="#thumbnail-preview-indicators" data-slide-to="0" class="active">
-					      <div class="thumbnail">
-					        <img class="img-responsive" src="images/obra11.jpg">
-					      </div>
-					    </li>
-					    <li data-target="#thumbnail-preview-indicators" data-slide-to="1">
-					      <div class="thumbnail">
-					        <img class="img-responsive" src="images/obra5.jpg">
-					      </div>
-					    </li>
-					    <li data-target="#thumbnail-preview-indicators" data-slide-to="2">
-					      <div class="thumbnail">
-					        <img class="img-responsive" src="images/obra9.jpg">
-					      </div>
-					    </li>
-					  </ol>
-					  <div class="carousel-inner">
-					    <div class="item slides active">
-					      <div class="slide-1"></div>
-					      <div class="container">
-					        <div class="carousel-caption">
-					          <!-- <h1>New carousel layout</h1>
-					          <p>Responsive thumbnail preview in carousel indicators.</p>
-					          <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
-					        </div>
-					      </div>
-					    </div>
-					    <div class="item slides">
-					      <div class="slide-2"></div>
-					      <div class="container">
-					        <div class="carousel-caption">
-					          <!-- <h1>Another example headline.</h1>
-					          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-					          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
-					        </div>
-					      </div>
-					    </div>
-					    <div class="item slides">
-					      <div class="slide-3"></div>
-					      <div class="container">
-					        <div class="carousel-caption">
-					          <!-- <h1>One more for good measure.</h1>
-					          <p>Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-					          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
-					        </div>
-					      </div>
-					    </div>
-					  </div>
-					  <a class="left carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="prev"><span class="fas fa-chevron-left"></span></a>
-					  <a class="right carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="next"><span class="fas fa-chevron-right"></span></a>
-					</div>
-					<div class="bac-narrow-content">
+				<div id="thumbnail-preview-indicators" class="carousel slide" data-ride="carousel">
+				  <!-- Indicators -->
+				  <ol class="carousel-indicators">
+				    <li data-target="#thumbnail-preview-indicators" data-slide-to="0" class="active">
+				      <div class="thumbnail">
+				        <img class="img-responsive" src="images/obra11.jpg">
+				      </div>
+				    </li>
+				    <li data-target="#thumbnail-preview-indicators" data-slide-to="1">
+				      <div class="thumbnail">
+				        <img class="img-responsive" src="images/obra5.jpg">
+				      </div>
+				    </li>
+				    <li data-target="#thumbnail-preview-indicators" data-slide-to="2">
+				      <div class="thumbnail">
+				        <img class="img-responsive" src="images/obra9.jpg">
+				      </div>
+				    </li>
+				  </ol>
+				  <div class="carousel-inner">
+				    <div class="item slides active">
+				      <div class="slide-1"></div>
+				      <div class="container">
+				        <div class="carousel-caption">
+				          <!-- <h1>New carousel layout</h1>
+				          <p>Responsive thumbnail preview in carousel indicators.</p>
+				          <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
+				        </div>
+				      </div>
+				    </div>
+				    <div class="item slides">
+				      <div class="slide-2"></div>
+				      <div class="container">
+				        <div class="carousel-caption">
+				          <!-- <h1>Another example headline.</h1>
+				          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+				          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
+				        </div>
+				      </div>
+				    </div>
+				    <div class="item slides">
+				      <div class="slide-3"></div>
+				      <div class="container">
+				        <div class="carousel-caption">
+				          <!-- <h1>One more for good measure.</h1>
+				          <p>Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+				          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
+				        </div>
+				      </div>
+				    </div>
+				  </div>
+				  <a class="left carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="prev"><span class="fas fa-chevron-left"></span></a>
+				  <a class="right carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="next"><span class="fas fa-chevron-right"></span></a>
+				</div>
+
+				<div class="bac-narrow-content obra-datos">
 					<div class="row">
 						<div class="col-lg-4 col-md-5 col-sm-12 animate-box fadeInLeft" data-animate-effect="fadeInLeft">
 							<div class="panel-group project_collaps">
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<a class="btn">CALLE DE PRUEBA 1234, SAN CLEMENTE</a>
+											<a class="btn size-b">CALLE DE PRUEBA 1234, SAN CLEMENTE</a>
 										</h4>
 									</div>
 								</div>
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<a class="btn">4 AMBIENTES</a>
+											<a class="btn size-b">4 AMBIENTES</a>
 										</h4>
 									</div>
 								</div>
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<a class="btn">AREA: 200 m2</a>
+											<a class="btn size-b">AREA: 200 m²</a>
 										</h4>
 									</div>
 								</div>
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<a class="btn">FECHA: 20 de Noviembre de 2010</a>
+											<a class="btn size-b">FECHA: 20 de Noviembre de 2010</a>
 										</h4>
 									</div>
 								</div>
 							</div>
 							<div class="obra-quote">
-								<h4 class="obra-title">Datos Importantes</h4>
+								<h4 class="bac-heading obra-title">Datos Importantes</h4>
 								<div class="quote-inner">
 									<p>Proin gravida nibh vel velit hace aauctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipissum, nec sagittis sem nibh id elit. </p>
 								</div>
@@ -181,7 +182,7 @@
 						</div>
 						<div class="col-lg-8 col-md-7 col-sm-12 animate-box" data-animate-effect="fadeInLeft">
 							<div class="obra-description">
-								<h4 class="obra-title">Resolución del Proyecto</h4>
+								<h4 class="bac-heading obra-title">Resolución del Proyecto</h4>
 								<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed semper, lacus sed feugiat dictum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
 									totam rem aperiam, eaque ipsa quae ab illo inventore. Proin gravida nibh vel velit hace aauctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipissum, nec sagittis sem nibh id elit. Duis sed odio sit
 									amet nibh vulputate cursus a sit aasmet mauris.</p>
