--- a/proyecto-1.html
+++ b/proyecto-1.html
@@ -50,7 +50,7 @@
 			<aside id="bac-aside" role="complementary" class="border js-fullheight">
 				<nav id="bac-main-menu" role="navigation">
 					<ul>
-						<li class="bac-active"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="projects.html">Proyectos</a></li>
 						<li><a href="about.html">Quienes Somos</a></li>
 						<li><a href="tour360.html">Tour 360°</a></li>
