--- a/tour360.html
+++ b/tour360.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>BAC | Contacto</title>
+	<title>BAC | Tour 360°</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -58,10 +58,10 @@
 			<aside id="bac-aside" role="complementary" class="border js-fullheight">
 				<nav id="bac-main-menu" role="navigation">
 					<ul>
-						<li class="bac-active"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="projects.html">Proyectos</a></li>
 						<li><a href="about.html">Quienes Somos</a></li>
-						<li><a href="tour360.html">Tour <span id="demotext">360°</span></a></li>
+						<li class="bac-active"><a href="tour360.html">Tour 360°</span></a></li>
 						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</nav>
