se modifico parte el css en general otras cosas

--- a/proyecto-1.html
+++ b/proyecto-1.html
@@ -51,7 +51,14 @@
 				<nav id="bac-main-menu" role="navigation">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="projects.html">Proyectos</a></li>
+						<li><a href="projects.html">Proyectos</a>
+							<ul class="bac-sub-menu">
+								<li><a href="projects.html">Proyectos</a></li>
+								<li><a href="about.html">Quienes Somos</a></li>
+								<li><a href="tour360.html">Tour 360°</a></li>
+							</ul>
+							<!-- TODO: sub menu -->
+						</li>
 						<li><a href="about.html">Quienes Somos</a></li>
 						<li><a href="tour360.html">Tour 360°</a></li>
 						<li><a href="contact.html">Contacto</a></li>
