--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Flexslider -->
 	<script src="js/jquery.flexslider-min.js"></script>
+	<!-- Sticky Kit -->
+	<script src="js/sticky-kit.min.js"></script>
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	<!-- MAIN JS -->
