se agrego submenu, htmls y demas detalles

--- a/about.html
+++ b/about.html
@@ -107,7 +107,47 @@
 					</div>
 				</div>
 
-				<!-- TODO: Analizar crear tabla con pestanias -->
+				<div class="accordion bac-about-us" id="accordion">
+					<!-- panel -->
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="panel-title"><a data-parent="#accordion" data-toggle="collapse" href="#collapse-1" aria-expanded="true" class="">NUESTRA MISIÓN</a></h4>
+						</div>
+						<div id="collapse-1" class="panel-collapse collapse in" aria-expanded="true" style="">
+							<div class="panel-body">
+								<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+							</div>
+						</div>
+					</div>
+					<!-- /panel -->
+
+					<!-- panel -->
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="panel-title"><a class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapse-2" aria-expanded="false">NUESTRA VISIÓN</a></h4>
+						</div>
+						<div id="collapse-2" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+							<div class="panel-body">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							</div>
+						</div>
+					</div>
+					<!-- /panel -->
+
+					<!-- panel -->
+					<div class="panel">
+						<div class="panel-heading">
+							<h4 class="panel-title"><a class="collapsed" data-parent="#accordion" data-toggle="collapse" href="#collapse-3" aria-expanded="false">NUESTRA PROPUESTA</a></h4>
+						</div>
+						<div id="collapse-3" class="panel-collapse collapse" aria-expanded="false">
+							<div class="panel-body">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+							</div>
+						</div>
+					</div>
+					<!-- /panel -->
+
+				</div>
 
 				<div class="row linked">
 					<div class="col-md-offset-1 col-md-2 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
