--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 			</div>
 
 
-			<div id="bac-parallax1" class="bac-parallax1" style="background-image: url(images/3.Frente_teja_plana_negra.jpg);" data-stellar-background-ratio="0.5">
+			<div id="bac-parallax1" class="bac-parallax1" style="background-image: url(images/para2.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="bac-narrow-content">
 					<div class="row">
