--- a/obra-1.html
+++ b/obra-1.html
@@ -58,7 +58,13 @@
 			<nav id="bac-main-menu" role="navigation">
 				<ul>
 					<li class="bac-active"><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Proyectos</a></li>
+					<li><a href="projects.html">Proyectos</a>
+						<ul id="bac-sub-menu">
+							<li class="bac-active"><a href="residenciales.html">- Residenciales</a></li>
+							<li><a href="comerciales.html">- Comerciales</a></li>
+							<li><a href="desarrollos-inmobiliarios.html">- Desarrollos Inmobiliarios</a></li>
+						</ul>
+					</li>
 					<li><a href="about.html">Quienes Somos</a></li>
 					<li><a href="tour360.html">Tour 360°</a></li>
 					<li><a href="contact.html">Contacto</a></li>
@@ -154,7 +160,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<a class="btn size-b">4 AMBIENTES</a>
+											<a class="btn size-b">AMBIENTES: 4</a>
 										</h4>
 									</div>
 								</div>
