--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,13 @@
 			<nav id="bac-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="bac-active"><a href="projects.html">Proyectos</a></li>
+					<li class="bac-active"><a href="projects.html">Proyectos</a>
+					</li>
+					<ul id="bac-sub-menu">
+						<li><a href="residenciales.html">- Residenciales</a></li>
+						<li><a href="comerciales.html">- Comerciales</a></li>
+						<li><a href="desarrollos-inmobiliarios.html">- Desarrollos Inmobiliarios</a></li>
+					</ul>
 					<li><a href="about.html">Quienes Somos</a></li>
 					<li><a href="tour360.html">Tour 360°</a></li>
 					<li><a href="contact.html">Contacto</a></li>
@@ -82,7 +88,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide s-first" data-animate-effect="fadeInLeft">
 						<div class="projects-entry">
-							<a href="proyecto-1.html" class="projects-img">
+							<a href="residenciales.html" class="projects-img">
 								<img src="images/cat1.jpg" class="img-responsive s-off" alt="">
 								<img src="images/cat1l.jpg" class="img-responsive switch" alt="" style="height: 28vh; width: 100%;">
 								<div class="centered"><span class="up line">01.</span><p>RESIDENCIALES</p></div>
@@ -92,7 +98,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide" data-animate-effect="fadeInLeft">
 						<div class="projects-entry">
-							<a href="proyecto-2.html" class="projects-img">
+							<a href="comerciales.html" class="projects-img">
 								<img src="images/cat2.jpg" class="img-responsive s-off" alt="">
 								<img src="images/cat2l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
 								<div class="centered"><span class="up line">02.</span><p>COMERCIALES</p></div>
@@ -101,7 +107,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 animate-box sideToSide s-last" data-animate-effect="fadeInLeft">
 						<div class="projects-entry">
-							<a href="proyecto-3.html" class="projects-img">
+							<a href="desarrollos-inmobiliarios.html" class="projects-img">
 								<img src="images/cat3.jpg" class="img-responsive s-off" alt="">
 								<img src="images/cat3l.jpg" class="img-responsive switch" alt="" style="height: 26vh; width: 100%;">
 								<div class="centered"><span class="up line">03.</span><p class="p-last">DESARROLLOS INMOBILIARIOS</p></div>
