se agregan cambios al index y css

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 			<aside id="bac-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
+						<a href="#" class="btn btn-primary-outline">contactenos</a>
 				   	<li style="background-image: url(images/slide.jpg);">
 						</li>
 						<li style="background-image: url(images/slide2.jpg);">
